Ydal 159 implements document chunking (#98)
* YDAL-159  implementation of chunking process